[CDAP-13961][CDAP-13770] Fixes profile name overflow issues - Adds tooltip title for profile name in ProfilesListViewInPipeline component - Fixes overflow issue with profile dropdown in schedule modeless - Fixes overflow issue with profile name in current profile popover in pipeline detail - Fixes overflow issue with current profile name in pipeline detail - uses truncate class instead - Fixes text overflow in profile deletion modal - Uses variable for width - Fixes JS errors - Don't wrap profile name if we're showing ellipses

--- a/cdap-ui/app/cdap/components/Cloud/Profiles/ListView/ListView.scss
+++ b/cdap-ui/app/cdap/components/Cloud/Profiles/ListView/ListView.scss
@@ -122,6 +122,10 @@ $disabled-color: $red-02;
           }
         }
 
+        .profile-label {
+          white-space: nowrap;
+        }
+
         .enabled-label {
           color: $enabled-color;
         }
