--- a/cdap-ui/app/cdap/components/PipelineDetails/ProfilesListView/ProfilesListViewInPipeline.scss
+++ b/cdap-ui/app/cdap/components/PipelineDetails/ProfilesListView/ProfilesListViewInPipeline.scss
@@ -91,6 +91,9 @@ $enabled-color: $green-02;
           color: $brand-primary-color;
           margin-right: 5px;
         }
+        .profile-label {
+          white-space: nowrap;
+        }
       }
     }
     &.disabled {
