--- a/cdap-ui/app/styles/common.less
+++ b/cdap-ui/app/styles/common.less
@@ -395,3 +395,10 @@ footer {
     }
   }
 }
+
+/* Truncate text with ellipsis helper */
+.truncate {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
